[package]
name = "hopper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "sync",
    "parking_lot",
    "fs",
] }
tokio-util = { version = "0.7", features = ["rt"] }

anyhow = "1"
rand = "0.8"
rustc-hash = "2.1"

serde = { version = "1", features = ["derive"] }
serde-env = "0.2"

tracing = "0.1"
tracing-subscriber = "0.3"

ed25519-dalek = { version = "2", features = ["rand_core"] }
ed25519 = "2.2"

x25519-dalek = "2"
chacha20poly1305 = "0.10"
